--- a/src/styles.css
+++ b/src/styles.css
@@ -3,7 +3,7 @@
 
 /* 2. Definir paleta de colores para MODO CLARO (por defecto) */
 :root {
-  --background: #f0f7ff;
+  --background: #e0d1eeb4;
   --surface: #ffffff;
   --accent: #917bbd;
   --text-primary: #1c2541;
