Nuevos cambios y actualizaciones

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,8 +1,11 @@
 <app-header />
 
 <main>
-  <section id="sobre-mi">
+  <section>
     <app-hero />
+  </section>
+
+  <section id="sobre-mi">
     <app-about-me />
   </section>
 
