--- a/src/app/components/layout/header/header.html
+++ b/src/app/components/layout/header/header.html
@@ -1,9 +1,9 @@
 <header>
   <div class="header-content">
     <nav>
-      <a href="#experiencia">Experiencia</a>
-      <a href="#proyectos">Proyectos</a>
       <a href="#sobre-mi">Sobre mí</a>
+      <a href="#experiencia">Experiencia</a>
+      <a href="#proyectos">Mis proyectos</a>
       <a href="#contacto">Contacto</a>
     </nav>
     <button (click)="toggleTheme()" class="theme-toggle" [attr.aria-label]="'Cambiar a modo ' + (isDarkMode() ? 'claro' : 'oscuro')">
