--- a/src/app/components/about-me/about-me.html
+++ b/src/app/components/about-me/about-me.html
@@ -8,7 +8,7 @@
       Lo que empezó como un juego —pequeñas bromas en el navegador y extensiones con efectos absurdos— se convirtió en una pasión. Entendí su lema: <strong>“A programar se aprende programando”</strong>. Así que di el paso, me formé en Desarrollo de Aplicaciones Multiplataforma y descubrí que este es el lugar donde mi curiosidad, mi lógica y mis ganas de crear encuentran su sitio.
     </p>
     <p>
-      Sé que acabo de empezar, pero mi motivación, mi capacidad de aprender y mi respeto por este oficio marcan la diferencia. Para mí, no es solo un trabajo: es algo que, sin saberlo, llevo años preparando.
+      Lo que me define es mi motivación, mi rápida capacidad de aprendizaje y un profundo respeto por el oficio. Para mí, no es solo un trabajo: es algo que, sin saberlo, llevo años preparando.
     </p>
   </div>
 </div>
