--- a/src/app/components/layout/footer/footer.html
+++ b/src/app/components/layout/footer/footer.html
@@ -1,4 +1,3 @@
-<p>footer works!</p>
 <footer>
-  <p>© 2025 - Desarrollado con Angular y mucho café.</p>
+  <p>© 2025 - Desarrollado con Angular por Alicia Caparrós.</p>
 </footer>
