--- a/src/app/components/project-list/project-list.html
+++ b/src/app/components/project-list/project-list.html
@@ -6,16 +6,16 @@
         <div class="image-container">
           <img class="project-image" [src]="project.imageUrl" [alt]="'Vista previa del proyecto ' + project.title">
         </div>
-
+        
         <div class="card-content">
           <h3>{{ project.title }}</h3>
           <p>{{ project.description }}</p>
-
+          
           <p class="tech-list">
             <strong>Tecnologías:</strong>
             {{ getTechnologyNames(project.technologies) }}.
           </p>
-
+  
           <div class="project-logos">
             @for (tech of project.technologies; track tech.name) {
               @if (tech.iconUrl) {
@@ -24,8 +24,11 @@
                 }
             }
           </div>
-
-          <a [href]="project.githubUrl" target="_blank" rel="noopener noreferrer">Ver en GitHub</a>
+          
+          <a [href]="project.githubUrl" target="_blank" rel="noopener noreferrer">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" alt="Logo de GitHub" class="github-logo">
+            Ver en GitHub
+          </a>
         </div>
       </div>
     }
