--- a/src/app/components/hero/hero.html
+++ b/src/app/components/hero/hero.html
@@ -1,9 +1,8 @@
 <section class="hero-container">
   <img src="assets/foto-perfil.jpg" alt="Foto de Alicia Caparrós" class="hero-photo">
-
   <h1 class="name">Alicia Caparrós Masiá</h1>
-  <p class="subtitle">"Desarrolladora Frontend dedicada a transformar diseños en experiencias de usuario intuitivas y accesibles, construyendo aplicaciones robustas con tecnología web moderna."</p>
+  <p class="subtitle">{{ t().hero_subtitle }}</p>
   <a href="https://www.linkedin.com/in/tu-usuario-de-linkedin" target="_blank" rel="noopener noreferrer" class="cta-button">
-    Visita mi LinkedIn
+    {{ t().hero_button }}
   </a>
 </section>
