--- a/src/app/components/contact-form/contact-form.html
+++ b/src/app/components/contact-form/contact-form.html
@@ -1,8 +1,6 @@
 <div class="contact-container">
-  <h2>Hablemos</h2>
-  <p>
-    Estoy buscando activamente nuevas oportunidades y desafíos como desarrolladora. Si crees que mi perfil encaja en tu equipo o proyecto, no dudes en contactarme.
-  </p>
+  <h2>{{ t().contact_title }}</h2>
+  <p>{{ t().contact_p1 }}</p>
   <div class="contact-links">
     <a [href]="'mailto:' + email()" class="contact-button">
       <span class="material-symbols-outlined">mail</span>
