--- a/src/app/components/project-list/project-list.html
+++ b/src/app/components/project-list/project-list.html
@@ -1,30 +1,26 @@
 <section class="projects">
-  <h2>Mis Proyectos</h2>
+  <h2>{{ t().projects_title }}</h2>
   <div class="project-grid">
-    @for (project of projects(); track project.title) {
+    @for (project of projects(); track project.translationKey) {
       <div class="project-card">
         <div class="image-container">
-          <img class="project-image" [src]="project.imageUrl" [alt]="'Vista previa del proyecto ' + project.title">
+          <img class="project-image" [src]="project.imageUrl" [alt]="'Vista previa del proyecto ' + getProjectTranslation(project.translationKey).title">
         </div>
-        
         <div class="card-content">
-          <h3>{{ project.title }}</h3>
-          <p>{{ project.description }}</p>
-          
+          <h3>{{ getProjectTranslation(project.translationKey).title }}</h3>
+          <p>{{ getProjectTranslation(project.translationKey).description }}</p>
           <p class="tech-list">
             <strong>Tecnologías:</strong>
             {{ getTechnologyNames(project.technologies) }}.
           </p>
-  
           <div class="project-logos">
             @for (tech of project.technologies; track tech.name) {
               @if (tech.iconUrl) {
                 <img [src]="tech.iconUrl" [alt]="tech.name" [title]="tech.name">
               } @else {
-                }
+              }
             }
           </div>
-          
           <a [href]="project.githubUrl" target="_blank" rel="noopener noreferrer">
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/github/github-original.svg" alt="Logo de GitHub" class="github-logo">
             Ver en GitHub
