Mejoras en porfolio

--- a/src/app/components/about-me/about-me.html
+++ b/src/app/components/about-me/about-me.html
@@ -3,9 +3,9 @@
     <h2>{{ t().about_title }}</h2>
     <p>{{ t().about_p1 }}</p>
     <p>
-      {{ t().about_p2.split('“A programar se aprende programando”')[0] }}
-      <strong>“A programar se aprende programando”</strong>
-      {{ t().about_p2.split('“A programar se aprende programando”')[1] }}
+      {{ t().about_p2[0] }}
+      <strong>{{ t().about_motto }}</strong>
+      {{ t().about_p2[1] }}
     </p>
     <p>{{ t().about_p3 }}</p>
   </div>
