--- a/src/app/components/about-me/about-me.css
+++ b/src/app/components/about-me/about-me.css
@@ -1,21 +1,21 @@
 .about-container {
   padding-top: 4rem;
-  max-width: 750px; /* Limitamos el ancho para mejorar la legibilidad */
-  margin: 0 auto; /* Centramos el contenedor de texto */
+  max-width: 750px;
+  margin: 0 auto; 
 }
 
 .about-text h2 {
   font-size: 2rem;
   color: var(--text-primary);
   margin-bottom: 1.5rem;
-  text-align: center; /* Centramos el título */
+  text-align: center; 
 }
 
 .about-text p {
   color: var(--text-secondary);
   line-height: 1.8;
   margin-bottom: 1rem;
-  text-align: justify; /* Justificamos el texto para un look más limpio */
+  text-align: justify; 
 }
 
 .about-text p:last-child {
