--- a/src/app/components/project-list/project-list.css
+++ b/src/app/components/project-list/project-list.css
@@ -95,12 +95,12 @@ h2 {
   transform: scale(1.1);
 }
 
-.project-links { 
+.project-links {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 1rem;
-  margin-top: 1.5rem; 
+  margin-top: 1.5rem;
 }
 
 .card-content a {
@@ -112,7 +112,7 @@ h2 {
   border-radius: 8px;
   text-align: center;
   transition: background-color 0.2s ease, transform 0.2s ease;
-  margin-top: auto; 
+  margin-top: auto;
   
   display: inline-flex;
   align-items: center;
@@ -120,10 +120,10 @@ h2 {
   gap: 0.5rem; 
 }
 
-.card-content a.secondary { /* Estilo para el botón secundario (Demo) */
-    background-color: var(--surface-darker); 
+.card-content a.secondary {
+    background-color: var(--surface-darker);
     color: var(--text-primary);
-    border: 1px solid var(--border-color); 
+    border: 1px solid var(--border-color);
 }
 
 .card-content a.secondary:hover {
@@ -131,15 +131,14 @@ h2 {
     color: var(--text-primary);
 }
 
-
 .card-content a:hover {
   background-color: var(--text-primary);
   transform: scale(1.03);
 }
 
-/* 2. Estilo para el logo de GitHub */
-.github-logo {
+
+.cta-button .github-icon {
   height: 20px;
-  width: 20px;
-  filter: invert(1) brightness(2); 
+  width: auto;
+  filter: brightness(0) invert(1);
 }
