--- a/src/app/components/project-list/project-list.html
+++ b/src/app/components/project-list/project-list.html
@@ -1,24 +1,30 @@
 <div class="project-list-container">
   <h2>{{ t().projects_title }}</h2>
-  <div class="project-grid"> @for (project of projects(); track project.translationKey) {
+  <div class="project-grid">
+    @for (project of projects(); track project.translationKey) {
       <div class="project-card">
-        <div class="image-container"> <img class="project-image" [src]="project.imageUrl" [alt]="'Vista previa del proyecto ' + getProjectTranslation(project.translationKey).title">
+        <div class="image-container">
+            <img class="project-image" [src]="project.imageUrl" [alt]="'Vista previa del proyecto ' + getProjectTranslation(project.translationKey).title">
         </div>
-        <div class="card-content"> <h3>{{ getProjectTranslation(project.translationKey).title }}</h3>
+        <div class="card-content">
+          <h3>{{ getProjectTranslation(project.translationKey).title }}</h3>
           <p>{{ getProjectTranslation(project.translationKey).description }}</p>
 
-          <div class="project-logos"> @for (tech of project.technologies; track tech.name) {
-              <div class="tech-item"> @if (tech.iconUrl) {
+          <div class="project-logos">
+            @for (tech of project.technologies; track tech.name) {
+              <div class="tech-item">
+                @if (tech.iconUrl) {
                   <img [src]="tech.iconUrl" [alt]="tech.name" [title]="tech.name">
                 } @else {
-                  <span class="tech-name">{{ tech.name }}</span> }
+                  <span class="tech-name">{{ tech.name }}</span>
+                }
               </div>
             }
           </div>
 
           <div class="project-links">
             <a [href]="project.githubUrl" target="_blank" rel="noopener noreferrer" class="cta-button">
-              <span class="material-symbols-outlined">code</span> GitHub
+              <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub" class="github-icon"> GitHub
             </a>
             @if (project.liveDemoUrl) {
               <a [href]="project.liveDemoUrl" target="_blank" rel="noopener noreferrer" class="cta-button secondary">
