--- a/src/app/components/hero/hero.html
+++ b/src/app/components/hero/hero.html
@@ -8,8 +8,7 @@
     <a href="https://www.linkedin.com/in/alicia-caparros-masia-39aa6a357" target="_blank" rel="noopener noreferrer" class="cta-button">
       {{ t().hero_button }}
     </a>
-    <a href="assets/cv-alicia-caparros.pdf" download class="cta-button">
-      {{ t().hero_cv_button }}
+    <a href="assets/cv-alicia-caparros_portfolio.pdf" download class="cta-button"> {{ t().hero_cv_button }}
     </a>
   </div>
 </section>
